# sci-craft

./: .gitignore  LICENSE  README.md  pyproject.toml  sci-craft-comparison.md  sci-craft-design.md  sci-craft-main.md  sci-craft-plan.md  sci-craft-skills.md  sci-craft.md  sync-to-obsidian.bat
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  skill-feedback.md
.github/workflows/: validate.yml
Obsidian-sync/: 2026-06-26-sci-craft-phase1.md  nature.yaml
adapters/: base.py  claude.py  codex.py  trae.py
builder/: assembler.py  validator.py
cli/: __init__.py  __main__.py  build.py  cache.py  validate.py  workflow.py
core/journals/: _base.yaml  nature.yaml  science.yaml
core/workflows/: full-pipeline.yaml  literature-review.yaml  systematic-review.yaml
engine/: __init__.py  cache.py  planner.py  renderer.py  validator.py  workflow.py
scripts/: build.py  install.py
skills/_shared/: glossary.md  style-guide.md
skills/bibliometrics-analyzer/: README.md  SKILL.md  manifest.yaml
skills/literature-search/: README.md  SKILL.md  manifest.yaml
skills/literature-summarizer/: README.md  SKILL.md  manifest.yaml
skills/research-gap-finder/: README.md  SKILL.md  manifest.yaml
skills/research-ideation/: README.md  SKILL.md  manifest.yaml
skills/sci-citation/: README.md  SKILL.md  manifest.yaml
skills/sci-data/: README.md  SKILL.md  manifest.yaml
skills/sci-figure/: README.md  SKILL.md  manifest.yaml
skills/sci-framework/: README.md  SKILL.md  manifest.yaml
skills/sci-paper2ppt/: README.md  SKILL.md  manifest.yaml
skills/sci-polishing/: README.md  SKILL.md  manifest.yaml
skills/sci-reader/: README.md  SKILL.md  manifest.yaml
skills/sci-response/: README.md  SKILL.md  manifest.yaml
skills/sci-reviewer/: README.md  SKILL.md  manifest.yaml
skills/sci-writing/: README.md  SKILL.md  (+1 more)
tests/: test_adapters.py  test_assembler.py  test_cli_build.py  test_cli_init.py  test_scripts_build.py  test_scripts_install.py  test_validator.py
(+35 files in other folders)
