[project]
name = "sci-craft"
version = "0.1.0"
description = "Multi-journal, multi-platform academic writing Skill framework"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.0",
]
authors = [
    {name = "wyt1017"},
]
license = {text = "MIT"}
keywords = ["academic-writing", "skills", "nature", "science", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[project.scripts]
sci-craft = "scripts.build:main"
sci-craft-build = "cli.build:main"
sci-craft-workflow = "cli.workflow:main"
sci-craft-validate = "cli.validate:main"
sci-craft-cache = "cli.cache:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=. --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.setuptools.packages.find]
include = ["adapters*", "builder*", "cli*", "core*", "engine*", "scripts*", "skills*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E402"]
